# junitxml2subunit

./: .gitignore  .travis.yml  Cargo.toml  README.md
.github/workflows/: main.yml
src/: main.rs
tests/: test_command.py  travis-before-install.sh  travis-test.sh
