[package]
name = "junitxml2subunit"
version = "1.0.1"
authors = ["Matthew Treinish <mtreinish@kortar.org>"]
description = "A tool to convert junitxml files to subunit v2"
license = "GPL-3.0"
readme = "README.md"
repository = "https://github.com/mtreinish/junitxml2subunit"
keywords = ["subunit", "junitxml"]
categories = ["development-tools::testing"]

[dependencies]
subunit-rust = "0.1.3"
quick-xml = "0.22.0"
chrono = "0.4"
num-traits = "0.2"
clap = "3"
